# Data_Risk_Agent

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
data/: contracts.csv  demo_reasoning.json  existing_risks.csv  incidents.csv  remediation_works.csv  service_roles.csv
src/data_risk_agent/: __init__.py  adapters.py  config.py  engine.py  llm.py  models.py  utils.py
tests/: test_engine.py
